fix: z-index

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 10;
     margin: auto;
     width: 720px;
     background-color: #1c1c21;
